# fileserver

./: Cargo.toml  build.rs
proto/: fileserver.proto
src/: client.rs  server.rs
