[package]
name = "fileserver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"