[package]
name = "fileserver"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"